Began work on the Binary Tree.
I'm putting the cart before the horse a little bit, though, so I'm going
to back off and start reading the bytes and getting the frequencies.

--- a/HuffmanEncoding.vcxproj.filters
+++ b/HuffmanEncoding.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="BinaryFileReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HuffmanData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
