--- a/HuffmanEncoding.vcxproj
+++ b/HuffmanEncoding.vcxproj
@@ -80,6 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryFileReader.h" />
+    <ClInclude Include="BinaryTree.h" />
+    <ClInclude Include="HuffmanData.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
