Binary tree is now written out to file
I used the Serializer class I made a while back to write the tree to
file  in preorder, so that I can read it back and reconstruct it
appropriately. I'm sure that there's more efficient things I can do, but
I'll look for those when I'm tidying up later.

--- a/HuffmanEncoding.vcxproj.filters
+++ b/HuffmanEncoding.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="FileCompressor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Serializeable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Serializer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +48,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileCompressor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Serializeable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Serializer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
