--- a/HuffmanEncoding.vcxproj
+++ b/HuffmanEncoding.vcxproj
@@ -82,12 +82,16 @@
     <ClInclude Include="FileCompressor.h" />
     <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="HuffmanData.h" />
+    <ClInclude Include="Serializeable.h" />
+    <ClInclude Include="Serializer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileCompressor.cpp" />
     <ClCompile Include="HuffmanEncoding.cpp" />
+    <ClCompile Include="Serializeable.cpp" />
+    <ClCompile Include="Serializer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
